fixed issue with horizontal scroll

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -41,10 +41,6 @@ li {
 
 }
 
-main {
-	width: 100%;
-}
-
 img,
 video {
   height: auto;
