--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -15,7 +15,7 @@ header {
 .logo {
 	color: $white;
 	fill: $white;
-	font-size: $font-size--l;
+	font-size: $font-size--m;
 	padding: .5rem 0;
 	text-align: center;
 
@@ -76,7 +76,7 @@ nav {
 	}
 
 	.logo {
-		font-size: 1.25rem;
+		font-size: $font-size--l;
 	  margin-bottom: 0;
 	}
 
