--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -77,7 +77,9 @@
 
 .project_subtitle {
 	color: $brand-secondary;
-	font-size: 1.5em;
+	font-size: 1em;
+	font-weight: bold;
+	text-transform: uppercase;
 	margin-bottom: .5rem;
 }
 
